# AI_Psychological_Agent

./: README.md  pyproject.toml
src/crewai_psychologist/: crew.py  main.py  session_summary.md  web_server.py
src/crewai_psychologist/config/: agents.yaml  tasks.yaml
src/crewai_psychologist/data/: #_David_Kolar_22.md  Davi_88.txt  David_22.md  David_25.md  David_77.md  David_Kolar,_22.md  David_Kolar_22.md  Kristay_22.txt  Kristyna_8.md  Martin_King_25.txt
src/crewai_psychologist/static/: Name_Age.md  Name_Age.txt  style.css
src/crewai_psychologist/templates/: index.html
src/crewai_psychologist/tools/: file_write_tool.py
