[project]
name = "crewai_pdf"
version = "0.1.0"
description = "crewai_pdf using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
crewai_pdf = "crewai_pdf.main:run"
run_crew = "crewai_pdf.main:run"
train = "crewai_pdf.main:train"
replay = "crewai_pdf.main:replay"
test = "crewai_pdf.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
